first change for new feature

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-      <h1>Welcome to Cloud Guys application.. Change 1</h1>
+      <h1>Welcome to Cloud Guys application.. Change for new-feature-X</h1>
     {{{body}}}
 </div>
 <div>
